--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
 >
     <testsuites>
         <testsuite name="SimpleCache Test Suite">
-            <directory>tests/SimpleCache/</directory>
+            <directory>tests/</directory>
         </testsuite>
     </testsuites>
 
