--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install:
   - composer install
 before_script:
   - ./tests/apcu-install.sh
+  - phpenv config-add tests/$TRAVIS_PHP_VERSION.ini
   - phpenv config-add tests/travis.ini
 services:
   - memcached
