--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_script:
   - phpenv config-add tests/$TRAVIS_PHP_VERSION.ini
   - phpenv config-add tests/travis.ini
 services:
+  - apc
   - memcached
 php:
   - "5.5"
