--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
 		"Apache License Version 2.0"
 	],
 	"autoload" : {
-		"psr-0" : {
-			"SimpleCache" : "lib"
+		"psr-4" : {
+			"SimpleCache\\" : "lib/"
 		}
 	}
 }
